--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -30,6 +30,140 @@ blocks:
         text-alignment: center
         color-scheme: base
         min-height: 50vh
+    - 
+        _id: rooms
+        room-style:
+            -   heading: STUDIO SUITES
+                img: /uploads/KC-Regent-Arch-1.jpg
+                rooms:
+                    - name: Ocean View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+                    - name: Garden View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+                    - name: Lagoon View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+            -   heading: ONE & TWO BEDROOM SUITES
+                img: /uploads/KC-Regent-Arch-1.jpg
+                rooms:
+                    - name: Ocean View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+                    - name: Garden View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+                    - name: Lagoon View King Room
+                      size: 120
+                      bed-size: king bed-size
+                      sleeps: 2
+                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+        color-scheme: highlight
+        min-height: 50vh
+    -
+        _id: slider
+        block-content-html: >-
+            <h2 class="heading-lg"> Spaces to explore</h2><p>Where most websites confine your
+            content to rigid aspect ratios, we design with freedom in mind. Our
+            designs support flexible layouts that adapt seamlessly to your
+            unique imagery —whether it's panoramic, vertical, or cinematic—to
+            tell your story in its most powerful form.</p>
+        text-alignment: center
+        text-box-max-width: 35rem
+        slider:
+
+            -
+                image: /uploads/videos/beach-cover.jpg
+                video_path: /uploads/videos/beach-insta-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 0.8
+                link:
+            -
+                image: /uploads/KC-Regent-slider-1.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-2.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/videos/carving-cover.jpg
+                video_path: /uploads/videos/carving-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 0.6
+                link:
+            -
+                image: /uploads/KC-Regent-slider-4.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-5.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-6.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/videos/bar-cover.jpg
+                video_path: /uploads/videos/bar-square-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 1
+                link:
+            -
+                image: /uploads/KC-Regent-slider-7.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-8.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-9.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-10.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-11.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+        color-scheme: dark
+        slider-col-padding: 0.5rem
+
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
