--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -26,7 +26,7 @@ blocks:
             vistas, direct lagoon-access, as well as a variety of suites,
             two-bedroom penthouses and expansive villas with private
             pools.</p><p><a class="button-featured" href="#">RESERVE NOW</a></p>
-        content-max-width: 500px
+        content-max-width: 700px
         text-alignment: center
         color-scheme: base
         min-height: 50vh
@@ -163,7 +163,41 @@ blocks:
                 link:
         color-scheme: dark
         slider-col-padding: 0.5rem
+    -
+        _id: wave-grid
+        block-content-html: >-
+            <h3 class="sub-heading">SUITES &amp; VILLAS</h3><h2
+            class="heading-lg">A coastal haven where Bali's spirit
+            unravels</h2><p>Espouse your preference of the one hundred and fifty
+            oceanside havens, including those with unrivalled sea or garden
+            vistas, direct lagoon-access, as well as a variety of suites,
+            two-bedroom penthouses and expansive villas with private
+            pools.</p>
+        grid:
+                - heading: Weekend Escape
+                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
+                  image: /uploads/KC-Regent-slider-11.jpg
+                  button:
+                    url: "#"
+                    text: reserve
+                - heading: Weekend Escape   
+                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. 
+                  image: /uploads/KC-Regent-slider-11.jpg
 
+                  button:
+                    url: "#"
+                    text: reserve
+                - heading: Weekend Escape   
+                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. 
+                  image: /uploads/KC-Regent-slider-11.jpg
+
+                  button:
+                    url: "#"
+                    text: reserve
+        content-max-width: 700px
+        text-alignment: center
+        color-scheme: base
+        min-height: 50vh
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
