added mobile version

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ blocks:
             mobile-friendliness and SEO.</p>
         block-content-max-width: 40rem
         image-width: max(25%,  15rem)
+        mobile-image-width: 80%
         img_aspect: Square
         scroll-items-color-scheme: highlight
         scroll-items:
