--- a/extra-block.html
+++ b/extra-block.html
@@ -50,6 +50,36 @@ blocks:
         image-alt: ocean cover
         desktop-image-position: right
         color-scheme: base
+    -   _id: experience-grid
+        grid:
+            - heading: Sea experience
+              description: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo labore tenetur maxime quos error harum odit laudantium beatae, itaque culpa fugiat sed magnam modi. Incidunt error accusantium culpa quod officia.
+              image: /uploads/videos/ocean-cover.jpg
+              image-alt: ocean cover
+              button:
+                    text: view more
+                    link: '#'
+                    external-Link: false
+            - heading: Sea experience
+              description: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo labore tenetur maxime quos error harum odit laudantium beatae, itaque culpa fugiat sed magnam modi. Incidunt error accusantium culpa quod officia.
+              image: /uploads/videos/ocean-cover.jpg
+              image-alt: ocean cover
+              button:
+                    text: view more
+                    link: '#'
+                    external-Link: false
+            - heading: Sea experience
+              description: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo labore tenetur maxime quos error harum odit laudantium beatae, itaque culpa fugiat sed magnam modi. Incidunt error accusantium culpa quod officia.
+              image: /uploads/videos/ocean-cover.jpg
+              image-alt: ocean cover
+              button:
+                    text: view more
+                    link: '#'
+                    external-Link: false
+        color-scheme: base
+    -   _id: contact
+        text-alignment: center
+        color-scheme: highlight
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
