--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ blocks:
             only beautiful but that also is optimised for speed, performance,
             mobile-friendliness and SEO.</p>
         block-content-max-width: 40rem
-        image-width: max(25%,  15rem)
+        image-width: max(80%, 15rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items-color-scheme: highlight
@@ -64,7 +64,7 @@ blocks:
             -
                 image: /uploads/regent-features-1.jpg
                 block-content-html: >-
-                    <h3>VISUAL</h3> <h2>Brand aligned </h2> <p>We’ll custom
+                    <h2>Brand aligned </h2> <p>We’ll custom
                     design your website to align with all the Regent brand
                     standards, including consistent use of the color palettes &
                     typography. </p>
@@ -72,7 +72,7 @@ blocks:
             -
                 image: /uploads/KC-Regent-Arch-2.jpg
                 block-content-html: >-
-                    <h3>STRATEGIC</h3> <h2>Modern design</h2> <p>We’ll consider
+                    <h2>Modern design</h2> <p>We’ll consider
                     all the best-practices of modern design and create a
                     structure that balances heritage with an intuitive  user
                     experience. </p>
@@ -153,8 +153,8 @@ blocks:
     - 
         _id: offset-grid
         content-1: 
-            subHeading: 
-            heading: "SENSE OF HARMONY"
+            subHeading: "SENSE OF HARMONY"
+            heading: 
             p-text: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua.</p>
             button:
             text: "Discover More"
@@ -164,8 +164,8 @@ blocks:
             src: "/uploads/videos/beach-cover.jpg"
             title: "Regent Bali Canggu Pool View"
         content-2: 
-            subHeading:
-            heading: "WELLNESS"
+            subHeading: "WELLNESS"
+            heading: 
             p-text: <p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.</p>
             button:
             text: "Discover More"
