--- a/extra-block.html
+++ b/extra-block.html
@@ -49,6 +49,7 @@ blocks:
         image: /uploads/videos/ocean-cover.jpg
         image-alt: ocean cover
         desktop-image-position: right
+
         color-scheme: base
     -   _id: experience-grid
         grid:
@@ -76,6 +77,8 @@ blocks:
                     text: view more
                     link: '#'
                     external-Link: false
+        text-styles:
+            vert-alignment: middle
         color-scheme: base
     -   _id: contact
         text-alignment: center
