--- a/extra-block.html
+++ b/extra-block.html
@@ -36,10 +36,10 @@ blocks:
     -   _id: grid-simple-2-col-text
         heading: Unique Regent Amenities
         left-column:
-            block-content-html: <h2>heading</h2><h3>subheading</h3><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto iure, facere nemo veritatis sapiente, nobis quam eaque itaque nisi mollitia repellendus officia sint repudiandae explicabo quis. Dignissimos omnis sunt asperiores.</p>
+            block-content-html: <h2 class="large-heading">heading</h2><h3 class="sub-heading">subheading</h3><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p><p> Architecto iure, facere nemo veritatis sapiente, nobis quam eaque itaque nisi mollitia repellendus officia sint repudiandae explicabo quis. Dignissimos omnis sunt asperiores.</p>
             color-scheme: base
         right-column:
-            block-content-html: <h2>heading</h2><h3>subheading</h3><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto iure, facere nemo veritatis sapiente, nobis quam eaque itaque nisi mollitia repellendus officia sint repudiandae explicabo quis. Dignissimos omnis sunt asperiores.</p>
+            block-content-html: <h3>subheading</h3><p>Lorem ipsum, dolor sit</p><p> amet consectetur adipisicing elit. Architecto iure, facere nemo veritatis sapiente, nobis quam eaque itaque nisi mollitia repellendus officia sint repudiandae explicabo quis. Dignissimos omnis sunt asperiores.</p>
             color-scheme: dark
         color-scheme: base
     -   _id: grid-simple-2-col-overlap
