Updated 1 file via CloudCannon.

--- a/extra-block.html
+++ b/extra-block.html
@@ -49,7 +49,9 @@ blocks:
                     Vitae saepe nam accusamus aliquid architecto aut ex laborum
                     soluta
         color-scheme: base
-    -   _id: grid-simple-2-col-text
+    -
+        _id: grid-simple-2-col-text
+        heading: Unique Regent Amenities
         left-column:
             block-content-html: >-
                 <h2 class="large-heading">heading</h2><h3
@@ -82,16 +84,15 @@ blocks:
             color-scheme: base
         right-column:
             block-content-html: >-
-                <h3>s</h3><h3>subheading</h3><p>Lorem ipsum, dolor
-                sit</p><p>amet consectetur adipisicing elit. Architecto iure,
-                facere nemo veritatis sapiente, nobis quam eaque itaque nisi
-                mollitia repellendus officia sint repudiandae explicabo quis.
-                Dignissimos omnis sunt
-                asperiores.</p><h3>subheading</h3><p>Lorem ipsum, dolor
-                sit</p><p>amet consectetur adipisicing elit. Architecto iure,
-                facere nemo veritatis sapiente, nobis quam eaque itaque nisi
-                mollitia repellendus officia sint repudiandae explicabo quis.
-                Dignissimos omnis sunt
+                <h3>subheading</h3><p>Lorem ipsum, dolor sit</p><p>amet
+                consectetur adipisicing elit. Architecto iure, facere nemo
+                veritatis sapiente, nobis quam eaque itaque nisi mollitia
+                repellendus officia sint repudiandae explicabo quis. Dignissimos
+                omnis sunt asperiores.</p><h3>subheading</h3><p>Lorem ipsum,
+                dolor sit</p><p>amet consectetur adipisicing elit. Architecto
+                iure, facere nemo veritatis sapiente, nobis quam eaque itaque
+                nisi mollitia repellendus officia sint repudiandae explicabo
+                quis. Dignissimos omnis sunt
                 asperiores.</p><h3>subheading</h3><p>Lorem ipsum, dolor
                 sit</p><p>amet consectetur adipisicing elit. Architecto iure,
                 facere nemo veritatis sapiente, nobis quam eaque itaque nisi
