color scheme update

--- a/extra-block.html
+++ b/extra-block.html
@@ -160,7 +160,7 @@ blocks:
     -
         _id: contact
         text-alignment: center
-        color-scheme: highlight
+        color-scheme: mint-base
         max-width: 660px
         form-max-width: 900px
 seo:
