--- a/third-design.html
+++ b/third-design.html
@@ -21,7 +21,7 @@ blocks:
         _id: text-block-top-overlap
         block-content-html: >-
             <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href="/uploads/KC-proposal.pdf" class="button-featured">DOWNLOAD PROPOSAL</a>
-        overlay-color-scheme: highlight
+        overlay-color-scheme: mint-base
         content-max-width: 35rem
         text-alignment: center
         color-scheme: dark
