--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -69,7 +69,7 @@ blocks:
                       bed-size: king bed-size
                       sleeps: 2
                       content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-        color-scheme: highlight
+        color-scheme: mint-200
         min-height: 50vh
     -
         _id: slider
