added dots to slider and fixed slider init bug

--- a/extra-block.html
+++ b/extra-block.html
@@ -161,7 +161,7 @@ blocks:
     -
         _id: contact
         text-alignment: center
-        color-scheme: mint-base
+        color-scheme: mint-400
         max-width: 660px
         form-max-width: 900px
 seo:
