--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ blocks:
         _id: text-block-top-overlap
         block-content-html: >-
             <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href="/uploads/KC-proposal.pdf" class="button-featured">DOWNLOAD PROPOSAL</a>
-        overlay-color-scheme: mint-base
+        overlay-color-scheme: mint-400
         content-max-width: 35rem
         text-alignment: center
         color-scheme: base
@@ -59,7 +59,7 @@ blocks:
         image-width: max(80%, 15rem)
         mobile-image-width: 80%
         img_aspect: Square
-        scroll-items-color-scheme: mint-base
+        scroll-items-color-scheme: mint-400
         scroll-items:
             -
                 image: /uploads/regent-features-1.jpg
@@ -298,7 +298,7 @@ blocks:
         content: 
             heading: "A coastal haven where Bali's spirit unravels"
         min-height: 50vh
-        color-scheme: mint-base
+        color-scheme: mint-400
         
     -
         _id: banner-bg-fixed
@@ -310,7 +310,7 @@ blocks:
         vert-alignment: middle
         overlay-opacity: 0
         min-height: 50vh
-        color-scheme: mint-base
+        color-scheme: mint-400
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
