--- a/extra-block.html
+++ b/extra-block.html
@@ -17,6 +17,36 @@ blocks:
         min-height: 90vh
         color-scheme: dark
     -
+        _id: events-block
+        location: Beach House
+        events:
+            - 
+                heading: DJ Scott Bruce
+                sub-heading: Resident DJ
+                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
+                featured-image: /uploads/videos/ocean-cover.jpg
+                button-link:
+                button-text: book a table
+            - 
+                heading: DJ Scott Bruce
+                sub-heading: Resident DJ
+                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
+                featured-image: /uploads/videos/ocean-cover.jpg   
+                button-link:
+                button-text: discover more
+            - 
+                heading: DJ Scott Bruce
+                sub-heading: Resident DJ
+                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
+                featured-image: /uploads/videos/ocean-cover.jpg   
+                button-link:
+                button-text: discover more
+        color-scheme: mint-200
+
+    -
         _id: grid-simple-2-col-icon
         heading: Unique Regent Amenities
         grid:
