Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ blocks:
             call of the Indian Ocean, you might catch the  scent of incense or
             the melody of the gamelan emitting from Pura Batu  Mejan, a
             centuries old sea temple set on rock as black as jet. A blessed way
-            to begin each day.</p><p><div style="max-width:25rem; margin:auto;
-            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
-            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
-            YOU.</h3></div></p> RESERVE NOW
+            to begin each day.</p><p></p><p><div style="max-width:25rem;
+            margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY
+            CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US
+            BUILD ONE FOR YOU.</h3></div></p><p></p><a class="button-featured"
+            href="#"> RESERVE NOW</a>
         overlay-color-scheme: mint-400
         content-max-width: 35rem
         text-alignment: center
