--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@ blocks:
     -
         _id: banner-split-video
         block-content-html: >-
-            <h3 class="sub-heading">High Impact Visuals</h3><h2
-            class="heading-lg">Designed to captivate & enchant</h2><p>With a
-            strong understanding of both the Regent brand & the resort itself,
-            we bring a depth of knowledge that allows us to thoughtfully create
-            a digital experience that captivates and enchants. That brings the
-            magic of the Regent brand to life on the screen and leverages all of
-            the high-impact visuals we’ve created for you to a modern new
-            website. Rich visual experiences, intentional storytelling and
-            subtle animations & interactions give an experience that brings joy
-            (and increases direct bookings). </p>
-        background-desktop-image: /uploads/KC-Regent-Arch-1.jpg
-        background-mobile-image: /uploads/KC-Regent-Arch-1.jpg
+            <h3 class="sub-heading">REGENT CLUB</h3><h2 class="heading-lg">Above
+            the Ocean, Beyond the Ordinary</h2><p>Explore an exclusive sanctuary
+            on your terms, and look forward to generous additional privileges,
+            featuring all-day buffet and a-la-carte gourmet offerings, premium
+            alcoholic beverages, daily afternoon tea and evening cocktail
+            inclusive of champagne. <br /><br />Participate in dedicated
+            cultural activities, and indulge in our comfortable adult-only
+            cabanas and infinity pool.</p>
+        background-desktop-image: /uploads/desktop-banner.jpg
+        background-mobile-image: /uploads/desktop-banner.jpg
         videos:
             -
                 video_path: /uploads/test-50k-kbs-hb.mp4
