--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ blocks:
         background-alt:
         desktop-image-position: right
         text-alignment: left
-        vert-alignment: bottom
+        vert-alignment: middle
         mobile-image-position: bottom
         max-height: 80vh
         collapse-top-space: false
