Updated 3 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3>WORKING WITH US</h3><h2 class="heading-lg">Extraordinary digital
-            presence</h2><p>With over a decade of experience in web development,
-            and a dedication to best-practices we’ll build you a website that’s
-            not only beautiful but that also is optimised for speed,
-            performance, mobile-friendliness and SEO.</p>
+            <h3>OUR ROOMS &amp; SUITES</h3><h2 class="heading-lg">Stay at Regent
+            Bali Canggu</h2><p>Espouse your preference of the one hundred and
+            fifty oceanside havens, including those with unrivalled sea or
+            garden vistas, direct lagoon-access, as well as a variety of suites,
+            two-bedroom penthouses and expansive villas with private pools.</p>
         block-content-max-width: 40rem
         image-width: max(80%, 15rem)
         mobile-image-width: 80%
@@ -77,18 +77,21 @@ blocks:
         scroll-items-color-scheme: mint-400
         scroll-items:
             -
-                image: /uploads/regent-features-1.jpg
+                image: /uploads/oceanfront-penthouse.jpg
                 block-content-html: >-
-                    <h2>Brand aligned </h2> <p>We’ll custom design your website
-                    to align with all the Regent brand standards, including
-                    consistent use of the color palettes & typography. </p>
+                    <h2>Oceanfront Penthouse Suite</h2> <p>Perched above the
+                    shore, the two-bedroom penthouse offers ocean horizons, a
+                    private infinity pool, and Regent Club privileges—an
+                    intimate retreat of refinement, indulgence, and serene
+                    coastal living.</p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-2.jpg
+                image: /uploads/private-beach-villa.jpg
                 block-content-html: >-
-                    <h2>Modern design</h2> <p>We’ll consider all the
-                    best-practices of modern design and create a structure that
-                    balances heritage with an intuitive  user experience. </p>
+                    <h2>Private Beach Villa</h2> <p>Ocean horizons greet each
+                    morning, while a private pool and teak bath invite
+                    stillness. With curated spirits and butler care, your villa
+                    is a sanctuary by the sea.</p>
                 link:
             -
                 image: /uploads/regent-features-3.jpg
@@ -166,12 +169,14 @@ blocks:
     -
         _id: offset-grid
         content-1:
-            subHeading: SENSE OF HARMONY
-            heading:
+            subHeading:
+            heading: SENSE OF HARMONY
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna
-                aliqua.</p>
+                <p>A curated selection of rejuvenating treatments draws from
+                time-honoured rituals and modern sensibilities to restore
+                balance and harmony. Guests can indulge in wet areas including
+                sauna, vitality pool, and ice bath, each crafted to invigorate
+                circulation and soothe tension. </p>
             button:
             text: Discover More
             url: '#'
