Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@ blocks:
             src: /uploads/videos/beach-cover.jpg
             title: Regent Bali Canggu Pool View
         content-2:
-            subHeading: WELLNESS
-            heading:
+            subHeading:
+            heading: Health Club
             p-text: >-
-                <p>On Canggu Beach, surfers are silhouetted in the morning sun,
-                boards  under arms ready to take on Bali's famous reef
-                breaks.</p>
+                <p>Begin or end the day in the best possible way. Maintain your
+                fitness regime in the resort's Health Club with dual-functional
+                spaces enabling exercise enthusiasts to stretch, breathe and
+                practice yoga in the mat-based studio, or elevate their heart
+                rate in the spacious gym.</p>
             button:
             text: Discover More
             url: '#'
