Updated 3 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-1:
-            src: /uploads/videos/beach-cover.jpg
-            title: Regent Bali Canggu Pool View
+            src: /uploads/health-club.jpg
+            title: Health Club
         content-2:
             subHeading:
             heading: Health Club
@@ -198,8 +198,8 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-2:
-            src: /uploads/videos/beach-cover.jpg
-            title: Regent Bali Canggu Pool View
+            src: /uploads/sense-of-harmony.jpg
+            title: Sense of Harmony
         scheme:
             scheme-color: base
             scheme-padding: small-padding
