Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@ blocks:
     -
         _id: slider
         block-content-html: >-
-            <h2 class="heading-lg"> Spaces to explore</h2><p>Where most websites
-            confine your content to rigid aspect ratios, we design with freedom
-            in mind. Our designs support flexible layouts that adapt seamlessly
-            to your unique imagery —whether it's panoramic, vertical, or
-            cinematic—to tell your story in its most powerful form.</p>
+            <h2 class="heading-lg">Moments of calm</h2><p>Wake up to the soft
+            glow of Balinese sunlight, the sound of the Indian Ocean breaking in
+            the distance, and the scent of tropical flowers in the air from the
+            comfort of your meticulously designed suite or villa.</p>
         text-alignment: center
         text-box-max-width: 35rem
         slider:
