Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -298,14 +298,13 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
+            subHeading:
             heading: TARU
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <p>Talented chefs craft authentic Indonesian cuisine, using only
+                the freshest, locally sourced ingredients. Experience the rich
+                tapestry of flavours that Bali has to offer<br /><br />Open 7am
+                - 10pm everyday.</p>
         carousel:
             desktop-image-position: left
             dots: true
