--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -51,6 +51,43 @@ blocks:
         color-scheme: base
     -   
         _id: grid-links
+        buttons:
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+            -
+                url: '#'
+                text: All-day dining
+                download: true
+                external-Link: false
+        column-count: 3
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
