Updated 3 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -310,23 +310,11 @@ blocks:
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru-1.jpg
+                    alt: Taru
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru-2.jpg
+                    alt: Taru
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
