Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ blocks:
     -
         _id: newsletter-form
         content:
-            heading: A coastal haven where Bali's spirit unravels
+            heading: Be a part of the journey.
         min-height: 50vh
         color-scheme: mint-400
     -
