--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -3,12 +3,14 @@ layout: default
 blocks:
     -
         _id: banner-video
-        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto">
+        block-content-html: >-
+            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
+            />
         videos:
             -
-                video_path: /uploads/test-50k-kbs-wave-hb.mp4
-                video_type: mp4
-        placeholder_image: /uploads/videos/ocean-cover.jpg
+                video_path:
+                video_type:
+        placeholder_image: /uploads/suites-villas.jpg
         controls: false
         autoplay: true
         text-alignment: center
@@ -30,59 +32,66 @@ blocks:
         text-alignment: center
         color-scheme: base
         min-height: 50vh
-    - 
+    -
         _id: rooms
         room-style:
-            -   heading: STUDIO SUITES
+            -
+                heading: STUDIO SUITES
                 img: /uploads/KC-Regent-Arch-1.jpg
                 rooms:
-                    - name: Ocean View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Garden View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Lagoon View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-            -   heading: ONE & TWO BEDROOM SUITES
+                    -
+                        name: Ocean View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Garden View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Lagoon View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+            -
+                heading: ONE & TWO BEDROOM SUITES
                 img: /uploads/KC-Regent-Arch-1.jpg
                 rooms:
-                    - name: Ocean View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Garden View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Lagoon View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
+                    -
+                        name: Ocean View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Garden View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Lagoon View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
         color-scheme: mint-200
         min-height: 50vh
     -
         _id: slider
         block-content-html: >-
-            <h2 class="heading-lg"> Spaces to explore</h2><p>Where most websites confine your
-            content to rigid aspect ratios, we design with freedom in mind. Our
-            designs support flexible layouts that adapt seamlessly to your
-            unique imagery —whether it's panoramic, vertical, or cinematic—to
-            tell your story in its most powerful form.</p>
+            <h2 class="heading-lg"> Spaces to explore</h2><p>Where most websites
+            confine your content to rigid aspect ratios, we design with freedom
+            in mind. Our designs support flexible layouts that adapt seamlessly
+            to your unique imagery —whether it's panoramic, vertical, or
+            cinematic—to tell your story in its most powerful form.</p>
         text-alignment: center
         text-box-max-width: 35rem
         slider:
-
             -
                 image: /uploads/videos/beach-cover.jpg
                 video_path: /uploads/videos/beach-insta-50k-HB.mp4
@@ -91,15 +100,15 @@ blocks:
                 link:
             -
                 image: /uploads/KC-Regent-slider-1.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-2.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/videos/carving-cover.jpg
@@ -109,21 +118,21 @@ blocks:
                 link:
             -
                 image: /uploads/KC-Regent-slider-4.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-5.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-6.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/videos/bar-cover.jpg
@@ -133,33 +142,33 @@ blocks:
                 link:
             -
                 image: /uploads/KC-Regent-slider-7.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-8.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-9.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-10.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
             -
                 image: /uploads/KC-Regent-slider-11.jpg
-                video_path: 
-                video_type: 
-                video_aspect_ratio: 
+                video_path:
+                video_type:
+                video_aspect_ratio:
                 link:
         color-scheme: dark
         slider-col-padding: 0.5rem
@@ -171,28 +180,37 @@ blocks:
             unravels</h2><p>Espouse your preference of the one hundred and fifty
             oceanside havens, including those with unrivalled sea or garden
             vistas, direct lagoon-access, as well as a variety of suites,
-            two-bedroom penthouses and expansive villas with private
-            pools.</p>
+            two-bedroom penthouses and expansive villas with private pools.</p>
         grid:
-                - heading: Weekend Escape
-                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                  image: /uploads/KC-Regent-slider-11.jpg
-                  button:
-                    url: "#"
+            -
+                heading: Weekend Escape
+                description: >-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod  tempor incididunt ut labore et dolore magna
+                    aliqua.
+                image: /uploads/KC-Regent-slider-11.jpg
+                button:
+                    url: '#'
                     text: reserve
-                - heading: Weekend Escape   
-                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. 
-                  image: /uploads/KC-Regent-slider-11.jpg
-
-                  button:
-                    url: "#"
+            -
+                heading: Weekend Escape
+                description: >-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod  tempor incididunt ut labore et dolore magna
+                    aliqua.
+                image: /uploads/KC-Regent-slider-11.jpg
+                button:
+                    url: '#'
                     text: reserve
-                - heading: Weekend Escape   
-                  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. 
-                  image: /uploads/KC-Regent-slider-11.jpg
-
-                  button:
-                    url: "#"
+            -
+                heading: Weekend Escape
+                description: >-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod  tempor incididunt ut labore et dolore magna
+                    aliqua.
+                image: /uploads/KC-Regent-slider-11.jpg
+                button:
+                    url: '#'
                     text: reserve
         content-max-width: 700px
         text-alignment: center
