Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -3,9 +3,7 @@ layout: default
 blocks:
     -
         _id: banner-video
-        block-content-html: >-
-            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
-            />
+        block-content-html: ''
         videos:
             -
                 video_path:
@@ -15,7 +13,7 @@ blocks:
         autoplay: true
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.5op
+        overlay-opacity: 0op
         min-height: 90vh
         color-scheme: dark
     -
