Updated 2 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -8,7 +8,7 @@ blocks:
             -
                 video_path:
                 video_type:
-        placeholder_image: /uploads/suites-villas.jpg
+        placeholder_image: /uploads/suites-villas-1.jpg
         controls: false
         autoplay: true
         text-alignment: center
